// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allPosMax(words, positions) 1`] = `
{
  "0": [
    "y",
    "ya",
    "yas",
    "yash",
    "yashe",
    "yasher",
    "yasherh",
  ],
  "1": [
    "a",
    "as",
    "ash",
    "ashe",
    "asher",
    "asherh",
  ],
  "2": [
    "s",
    "sh",
    "she",
    "sher",
    "sherh",
  ],
  "3": [
    "h",
    "he",
    "her",
    "herh",
  ],
  "4": [
    "e",
    "er",
    "erh",
  ],
  "5": [
    "r",
    "rh",
  ],
  "6": [
    "h",
  ],
  "7": [
    "s",
  ],
}
`;

exports[`allPosMax(words, ret1) 1`] = `
{
  "0": [
    "y",
    "ya",
    "yas",
    "yash",
    "yashe",
    "yasher",
    "yasherh",
  ],
  "1": [
    "a",
    "as",
    "ash",
    "ashe",
    "asher",
    "asherh",
  ],
  "2": [
    "s",
    "sh",
    "she",
    "sher",
    "sherh",
  ],
  "3": [
    "h",
    "he",
    "her",
    "herh",
  ],
  "4": [
    "e",
    "er",
    "erh",
  ],
  "5": [
    "r",
    "rh",
  ],
  "6": [
    "h",
  ],
  "7": [
    "s",
  ],
}
`;

exports[`triePosList(words, positions) 1`] = `
{
  "0": [
    "ya",
  ],
  "2": [
    "s",
    "she",
    "sher",
  ],
  "3": [
    "h",
    "he",
    "her",
  ],
  "4": [
    "er",
  ],
  "5": [
    "r",
  ],
  "6": [
    "h",
  ],
  "7": [
    "s",
  ],
}
`;
